# NES_Emulator

./: CMakeLists.txt
include/: defines.h  emulator.h  memorymap.h
include/console/: apu.h  console.h  cpu.h  oam.h  ppu.h  ram.h
src/: console.c  cpu.c  emulator.c  main.c
